[feat]: Entity 생성

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${SQL_URL}
+    url: ${TMP_SQL_URL}
     username: ${SQL_USERNAME}
     password: ${SQL_PASSWORD}
   jpa:
