--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,20 @@ spring:
       hibernate:
         format_sql: true
         default_batch_fetch_size: 100
+#cloud:
+#  aws:
+#    s3:
+#      bucket: ${AWS_S3_BUCKET}
+#    credentials:
+#      access-key: ${AWS_ACCESS_KEY}
+#      secret-key: ${AWS_SECRET_KEY}
+#    region:
+#      static: ${AWS_REGION}
+#      auto: false
+#    stack:
+#      auto: false
+
+
 springdoc:
   version: '@project.version@'
   api-docs:
