--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,16 +1,18 @@
 spring:
+  profiles:
+    include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${TMP_SQL_URL}
-    username: ${SQL_USERNAME}
-    password: ${SQL_PASSWORD}
+    url: jdbc:mysql://34.145.68.144/bussim_map?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+    username: junyeop
+    password: 0801
   jpa:
-    hibernate:
-      ddl-auto: update
+    database: mysql
+    hibernate.hbm2ddl.auto: update
     properties:
       hibernate:
         format_sql: true
-        default_batch_fetch_size: 100
+
 #cloud:
 #  aws:
 #    s3:
