--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,12 @@
 spring:
-  profiles:
-    include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://34.145.68.144/bussim_map?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
-    username: junyeop
-    password: 0801
+    url: ${SQL_URL}
+    username: ${SQL_USERNAME}
+    password: ${SQL_PASSWORD}
   jpa:
-    database: mysql
-    hibernate.hbm2ddl.auto: update
+    hibernate:
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
