--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
   data:
-    redis:용
+    redis:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
 
