[feat]: redis를 사용해 대규모 데이터 조회 처리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     include: oauth
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: ${TMP_SQL_URL}
+    url: ${SQL_URL}
     username: ${SQL_USERNAME}
     password: ${SQL_PASSWORD}
   jpa:
