--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,20 +10,9 @@ spring:
     properties:
       hibernate:
         format_sql: true
-
-#cloud:
-#  aws:
-#    s3:
-#      bucket: ${AWS_S3_BUCKET}
-#    credentials:
-#      access-key: ${AWS_ACCESS_KEY}
-#      secret-key: ${AWS_SECRET_KEY}
-#    region:
-#      static: ${AWS_REGION}
-#      auto: false
-#    stack:
-#      auto: false
-
+  redis:
+    host: localhost
+    port: 6379
 
 springdoc:
   version: '@project.version@'
@@ -36,20 +25,3 @@ springdoc:
     disable-swagger-default-url: true
     display-query-params-without-oauth2: true
     doc-expansion: none
-
-
-
-#    version: springdoc ?????? ??? ????.
-#
-#    api-docs: API ??? ??? ??? /api-docs? ????.
-#
-#    default-consumes-media-type ? default-produces-media-type: API?? ??? ?? ??? ??? application/json?? ????.
-#
-#    swagger-ui: Swagger UI? ?? ? ??? ????.
-#    operations-sorter: UI?? ??? ??? ??? ????.
-#    tags-sorter:
-#      Swagger: UI?? ??? ??? ??? ????.
-#    path: Swagger UI? ???? ? ?? ??? /swagger-ui.html? ????.
-#    disable-swagger-default-url: ?? Swagger URL? ?????? ???? ?? /swagger-ui.html?? ????? ??.
-#    display-query-params-without-oauth2: Swagger UI?? OAuth2 ?? ?? ????? ????.
-#    doc-expansion: Swagger UI?? ?? ??? ??????.
