--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,16 @@ dependencies {
 	implementation 'org.apache.commons:commons-csv:1.8'
 	implementation 'ch.hsr:geohash:1.4.0'
 //	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	//jwt
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+	implementation group: 'org.json', name: 'json', version: '20231013'
+
 }
 
 tasks.named('test') {
