--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
       host: ${REDIS_HOST:localhost}
       port: ${REDIS_PORT:6379}
 
+data:
+  tourInfo:
+    serviceKey: ${TOUR_INFO_KEY}
+
 #cloud:
 #  aws:
 #    s3:
