--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
         - main
-        - ci_cd
+        - feat/ci_cd
 jobs:
     deploy:
         runs-on: ubuntu-latest
