--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -65,4 +65,4 @@ jobs:
               docker stop kkilogbu || true
               docker rm kkilogbu || true
               docker pull ${{ steps.login-ecr.outputs.registry }}/backend:latest
-              docker run -d --name kkilogbu 8080:8080 -p ${{ steps.login-ecr.outputs.registry }}/backend:latest
+              docker run -d --name kkilogbu -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/backend:latest
