[CHORE]: docker 실행시 환경변수 빈값 문제

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,13 @@ jobs:
             distribution: temurin
             java-version: 17
 
+        - name : make application.yml
+          run : |
+            cd src/main/resources
+            touch application.yml
+            echo "${{secrets.APPLICATION}}" > ./application.yml
+          shell: bash
+
         - name: test and build
           run: |
             chmod +x ./gradlew
@@ -55,13 +62,6 @@ jobs:
         - name: Docker image push to ECR
           run: docker push ${{ steps.login-ecr.outputs.registry }}/backend:latest
 
-        - name : make application.yml
-          run : |
-            cd src/main/resources
-            touch application.yml
-            echo "${{secrets.APPLICATION}}" > ./application.yml
-          shell: bash
-
         - name: EC2 connection with SSH
           uses: appleboy/ssh-action@v1.0.3
           with:
@@ -72,15 +72,4 @@ jobs:
               docker stop kkilogbu || true
               docker rm kkilogbu || true
               docker pull ${{ steps.login-ecr.outputs.registry }}/backend:latest
-              docker run -d --name kkilogbu 
-                --env SQL_URL=${{ secrets.DB_URL }}
-                --env SQL_USERNAME=${{ secrets.DB_USERNAME }}
-                --env SQL_PASSWORD=${{ secrets.DB_PASSWORD }}
-                --env REDIS_HOST=${{ secrets.REDIS_HOST }}
-                --env REDIS_PORT=${{ secrets.REDIS_PORT }}
-                --env AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }}
-                --env AWS_REGION=${{ secrets.AWS_REGION }}
-                --env AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }}
-                --env AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }}
-                --env TOUR_INFO_KEY=${{ secrets.TOUR_INFO_KEY }}
-                -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/backend:latest
+              docker run -d --name kkilogbu -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/backend:latest
