--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
             distribution: temurin
             java-version: 17
 
+        - name: make application.yml
+          run: echo ${{ secrets.APPLICATION }} > src/main/resources/application.yml
+
         - name: test and build
           run: |
             chmod +x ./gradlew
@@ -65,15 +68,4 @@ jobs:
               docker stop kkilogbu || true
               docker rm kkilogbu || true
               docker pull ${{ steps.login-ecr.outputs.registry }}/backend:latest
-              docker run -d --name kkilogbu -p 8080:8080 \
-                -e SQL_URL=${{ secrets.DB_URL }} \
-                -e SQL_USERNAME=${{ secrets.DB_USERNAME }} \
-                -e SQL_PASSWORD=${{ secrets.DB_PASSWORD }} \
-                -e REDIS_HOST=${{ secrets.REDIS_HOST }} \
-                -e REDIS_PORT=${{ secrets.REDIS_PORT }} \
-                -e AWS_ACCESS_KEY=${{ secrets.AWS_ACCESS_KEY }} \
-                -e AWS_REGION=${{ secrets.AWS_REGION }} \
-                -e AWS_S3_BUCKET=${{ secrets.AWS_S3_BUCKET }} \
-                -e AWS_SECRET_KEY=${{ secrets.AWS_SECRET_KEY }} \
-                -e TOUR_INFO_KEY=${{ secrets.TOUR_INFO_KEY }} \
-                ${{ steps.login-ecr.outputs.registry }}/backend:latest
+              docker run -d --name kkilogbu -p 8080:8080 ${{ steps.login-ecr.outputs.registry }}/backend:latest
