--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
             java-version: 17
 
         - name: make application.yml
-          run: echo ${{ secrets.APPLICATION }} > src/main/resources/application.yml
+          run: echo "${{ secrets.APPLICATION }}" > src/main/resources/application.yml
 
         - name: test and build
           run: |
