[fix]: merge 충돌 해결

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
         branches:
         - main
         - feat/ci_cd
-        -
+        - hotfix
 jobs:
     deploy:
         runs-on: ubuntu-latest
