--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,22 @@ dependencies {
 	implementation 'org.apache.commons:commons-csv:1.8'
 	implementation 'ch.hsr:geohash:1.4.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+	// JWT 처리 라이브러리 (서명 검증 및 클레임 파싱)
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' // JSON 파싱을 위한 Jackson 사용
+
 }
+
+dependencyManagement {
+	imports {
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4" // Spring Cloud BOM
+	}
+}
+
 
 tasks.named('test') {
 	useJUnitPlatform()
