--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,10 +11,15 @@ spring:
       hibernate:
         format_sql: true
 
+  servlet:
+    multipart:
+      max-file-size: 20MB
+      max-request-size: 20MB
+
   data:
     redis:
-      host: ${REDIS_HOST:localhost}
-      port: ${REDIS_PORT:6379}
+      host: localhost
+      port: 6379
 
 data:
   tourInfo:
