--- a/build.gradle
+++ b/build.gradle
@@ -42,22 +42,29 @@ dependencies {
 	implementation 'ch.hsr:geohash:1.4.0'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+
 
 	// JWT 처리 라이브러리 (서명 검증 및 클레임 파싱)
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
 	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2' // JSON 파싱을 위한 Jackson 사용
 
+	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.0'
+
 }
 
+ext {
+	set('springCloudVersion', "2023.0.3")  // Spring Cloud Leyton (2023.0.x)
+}
 dependencyManagement {
 	imports {
-		mavenBom "org.springframework.cloud:spring-cloud-dependencies:2022.0.4" // Spring Cloud BOM
+		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
 	}
 }
 
+	tasks.named('test') {
+		useJUnitPlatform()
+	}
 
-tasks.named('test') {
-	useJUnitPlatform()
-}
+
