--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
     push:
         branches:
         - main
+        - refactor/create_record
 jobs:
     deploy:
         runs-on: ubuntu-latest
