[refactor]: record 생성시 address 추가 입력

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
         - name: test and build
           run: |
             chmod +x ./gradlew
-            ./gradlew clean build
+            ./gradlew clean build -x test
           working-directory: ./
           env:
             SQL_URL: ${{ secrets.DB_URL }}
