--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,10 @@ repositories {
 
 dependencies {
 
+
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
