[fix]: 외부 api요청을 통해 기록 피드 조회시 실제 record와 외부 api요청 결과를 혼합해서 응답

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -50,5 +50,6 @@ springdoc:
     display-query-params-without-oauth2: true
     doc-expansion: none
 
-
-
+data:
+  tourInfo:
+    serviceKey: ${TOUR_API_KEY}
